--- a/my-react-app/src/Components/Menubar.css
+++ b/my-react-app/src/Components/Menubar.css
@@ -1,12 +1,14 @@
 /* MenuBar.css */
 .navbar {
+  width: 100%; /* Ensure full width */
+  z-index: 1000; /* Ensure it's above other content */
+  height: 50px; /* Height of the menubar */
   display: flex;
   justify-content: space-around;
   align-items: center;
   background: white;
   border: '1px solid black';
   padding: 1rem;
-
 }
 
 .navbar userDisplay {
@@ -28,3 +30,4 @@
   color: black;
   text-decoration: none;
 }
+
